styles/styles.css
/* ... */
html {
  box-sizing: border-box;
}

html *,
html ::before,
html ::after {
  box-sizing: inherit;
}

a,
abbr,
acronym,
address,
applet,
article,
aside,
audio,
b,
big,
blockquote,
body,
canvas,
caption,
center,
cite,
code,
dd,
del,
details,
dfn,
div,
dl,
dt,
em,
embed,
fieldset,
figcaption,
figure,
footer,
form,
h1,
h2,
h3,
h4,
h5,
h6,
header,
hgroup,
html,
i,
iframe,
img,
ins,
kbd,
label,
legend,
li,
mark,
menu,
nav,
object,
ol,
output,
p,
pre,
q,
ruby,
s,
samp,
section,
small,
span,
strike,
strong,
sub,
summary,
sup,
table,
tbody,
td,
tfoot,
th,
thead,
time,
tr,
tt,
u,
ul,
var,
video {
  border: 0;
  font-size: 100%;
  margin: 0;
  padding: 0;
}

body {
  margin: 0;
  border: 0;
  font-size: 100%;
  display: none;
  color: var(--neutral-carbon);
  background: var(--neutral-white);
  font-family: var(--sans-serif-font-light);
  -webkit-font-smoothing: antialiased;
}

body.appear {
  display: unset;
}

main {
  padding-top: var(--nav-height-mobile);
  margin: auto;
}

main .section {
  padding: var(--spacer-layout-06) var(--spacer-layout-03);
}

h1,
h2,
h3,
h4,
h5 {
  margin: var(--spacer-layout-04) auto;
}

h4 + h2 {
  margin-top: 0;
}

sup {
  vertical-align: super;
  font-size: small;
}

/* project specific styles */
p,
dl,
ol,
ul,
pre,
blockquote {
  margin: var(--spacer-element-05) 0 var(--spacer-element-05);
}

.article-content-wrapper h1 {
font-size: var(--font-size-32);
max-width: var(--text-max-container);
margin: 16px 0;
}

.article-content-wrapper p.lede {
  font-size: var(--font-size-18);
  max-width: var(--text-max-container);
}

/* Article Detail - Divider */
.article-content-wrapper .divider {
  margin: var(--spacer-layout-04) 0;
}

.no-pad.section,
.no-pad.section .default-content-wrapper,
.no-pad.section p {
  margin: 0 auto;
  padding: 0;
}

/* removes extra space around images */
main p.only-picture,
main div.only-picture,
main source {
  line-height: 0;
  font-size: 0;
}

.section > div {
  width: calc(100% - 47px);
  margin: 0 auto;
}

main > .section {
  margin: 0;
  padding: 0;
  width: 100%;
}

.columns-gap-50 > div {
  gap: 50px
}

.column-content-top-border div > div {
  margin-bottom: 32px;
  max-width: 350px;
}

/* progressive section appearance */
main .section[data-section-status='loading'],
main .section[data-section-status='initialized'] {
    display: none;
}

/* Centered content in section */
.section.center > * {
  margin: 0 auto;
  text-align: center;
}

/* Section Top and Bottom */
.columns.columns-gap-50 > div {
  gap: 50px;
}

.columns.section-bottom-grid > div {
  row-gap: 0;
}

main .section > div:first-child {
  margin: 0 auto;
  padding-top: var(--spacer-layout-06);
}

main .section > div:last-child {
  margin: 0 auto;
  padding-bottom: var(--spacer-layout-06);
}

.section.pdf-viewer-container > .pdf-viewer-wrapper {
  padding-top: 0;
  padding-bottom: 0;
}

/* Block Library needs full width */
.section > div.library-config-wrapper {
  width: 100vw;
}

/* eyebrow */
.section > .default-content-wrapper > h4:first-of-type,
.section > .default-content-wrapper code:first-of-type {
  font-size: var(--font-size-11);
  letter-spacing: .2em;
  line-height: var(--line-height-120);
  margin: 0 0 var(--spacer-element-07);
  text-transform: uppercase;
}

.section-top div > h1 {
  margin: var(--spacer-element-08) 0 var(--spacer-element-07);
}

.section.section-top .columns-wrapper {
  padding-bottom: var(--spacer-layout-05);
}

.columns.content-band h1 {
  margin-top: 0;
}

.section .column-content-top-border > div > div h1 {
  font-size: 96px;
  line-height: 120%;
  letter-spacing: 0;
  font-weight: 300;
  margin: 0;
}

.section.article-content .article-main-wrapper {
  padding-top: var(--spacer-element-05);
}

.columns.row-header div > div > h2,
.section.section-header > div:nth-child(1) > h1,
.section.section-header > div:nth-child(1) > h2 {
  margin: 24px 0;
}

.section:first-of-type > .default-content-wrapper:first-of-type > h1:first-of-type {
  margin-top: 0;
}

.padding-bottom-40 {
  padding-bottom: 40px;
}

.padding-bottom-60 {
  padding-bottom: 60px;
}

main img {
  max-width: 100%;
  width: auto;
  height: auto;
}

/* Image variations */
.section.section-bottom .default-content-wrapper {
  padding-top: var(--spacer-layout-05);
}

.article-content picture img {
  margin: 0;
  border-radius: 10px;
  margin-bottom: 24px;
}

.columns.section-bottom-grid > div img {
  width: 54px;
  height: 54px;
  max-width: 54px;
  margin-bottom: var(--spacer-layout-02);
  margin-top: var(--spacer-layout-02);
}

.columns.section-bottom-grid > div:last-of-type *:last-child {
  margin-bottom: var(--spacer-layout-02);
}

.sticky-bottom-image .default-content-wrapper:last-child img {
  vertical-align: bottom
}

.article-content-wrapper .default-content-wrapper:first-child picture img {
  aspect-ratio: 3 / 2; /* stylelint-disable-line */
  object-fit: cover;
}

.margin-bottom-40 {
  margin-bottom: 40px;
}

.margin-bottom-60 {
  margin-bottom: 60px;
}

.section.margin-top-60,
.section .columns.margin-top-60 {
  margin-top: 60px;
}

.section.margin-top-40,
.section .columns.margin-top-40 {
  margin-top: 40px;
}

.bg-neutral-bone {
  background-color: var(--neutral-bone);
}

.section.notification-section {
  padding-top: 14px;
  padding-bottom: 14px;
}

.section.notification-section > div > p::before {
  content: '';
  display: inline-block;
  width: 5px;
  height: 32px;
  margin: -9px 50px -7px 0;
  background-image: var(--gradient-diagonal-down);
}

.section.section-header-right-content > div:nth-child(1) > h2,
.section.section-header-right-content > div:nth-child(1) > h4,
.section.section-header-right-content > div:nth-child(1) code {
  margin: 24px 0;
  width: 100%
}

.sticky-bottom-image .default-content-wrapper:last-child > p {
  margin-bottom: 0;
}

/* Content-band styles, icon-list variation */
.columns.content-band.icon-list > div {
  align-items: start;
  letter-spacing: var(--letter-spacing-001-em);
  margin-bottom: 0;
}
/* ... */

